tests/ui/macros/issue-29084.stderr
error[E0308]: mismatched types
  --> $DIR/issue-29084.rs:4:13
   |
LL | / macro_rules! foo {
LL | |     ($d:expr) => {{
LL | |         fn bar(d: u8) { }
LL | |         bar(&mut $d);
   | |         --- ^^^^^^^ expected `u8`, found `&mut u8`
   | |         |
   | |         arguments to this function are incorrect
...  |
LL | |     }}
LL | | }
   | |_- in this expansion of `foo!`
...
LL |       foo!(0u8);
   |       --------- in this macro invocation
   |
note: function defined here
  --> $DIR/issue-29084.rs:3:12
   |
LL | / macro_rules! foo {
LL | |     ($d:expr) => {{
LL | |         fn bar(d: u8) { }
   | |            ^^^ -----
LL | |         bar(&mut $d);
...  |
LL | |     }}
LL | | }
   | |_- in this expansion of `foo!`
...
LL |       foo!(0u8);
   |       --------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
